--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Fotogram</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="/img/favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -16,37 +22,37 @@
     <h1>My personal photo album</h1>
 
     <section class="img-container">
-    <img class="gallery-img " src="./Img2/Schaf.jpg" alt="China Mauer" />
-    <img class="gallery-img" src="./Img2/Viper-Schlange.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Wolf.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Husky.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Löwe - Kopie.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Eule.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Marienkäfer - Kopie.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Giraffe - Kopie.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/brown-bear-892232_1280.jpg" alt="Dhaka" />
-    <img class="gallery-img" src="./Img2/Schmetterling.jpg" alt="Dhaka" />
-    <img class="gallery-img " src="./Img2/Adler.jpg" alt="Dhaka" />
+      <img class="gallery-img" src="./Img2/Schaf.jpg" alt="Schafsherde" />
+      <img class="gallery-img"  src="./Img2/Viper-Schlange.jpg" alt="Viper-Schlange" />
+      <img class="gallery-img" src="./Img2/Wolf.jpg" alt="grauer Wolf" />
+      <img class="gallery-img" src="./Img2/Husky.jpg" alt="Huksy" />
+      <img class="gallery-img" src="./Img2/Löwe.png" alt="Löwe" />
+      <img class="gallery-img" src="./Img2/Eule.jpg" alt="Eule" />
+      <img class="gallery-img" src="./Img2/Marienkäfer - Kopie.jpg" alt="Marienkäfer"/>
+      <img class="gallery-img" src="./Img2/Giraffe - Kopie.jpg" alt="Giraffe" />
+      <img class="gallery-img" src="./Img2/brown-bear-892232_1280.jpg" alt="Braunbär"/>
+      <img class="gallery-img" src="./Img2/Schmetterling.jpg"  alt="Schmetterling"/>
+      <img class="gallery-img" src="./Img2/Adler.jpg" alt="Adler" />
     </section>
- 
-
 
     <!-- Modal -->
-    <div id="myModal" class="modal" aria-hidden="true">
-      <span class="close" aria-label="Schließen">&times;</span>
-      <div class="img-btn">
-        <div class="background-pic">
-          <img class="modal-content" id="modalImg" alt="" />
-          <div class="btn-group">
-            <button class="btn-container btn-prev" type="button">Zurück</button>
-            <span id="whichPic">1/2</span>
-            <button class="btn-container btn-next" type="button">Weiter</button>
+    <div class="test3">
+      <div id="myModal" class="modal" aria-hidden="true">
+        <span class="close" aria-label="Schließen">&times;</span>
+        <div class="img-btn">
+          <div class="background-pic">
+            <img class="modal-content" id="modalImg" alt="" />
+            <div class="btn-group">
+              <button class="btn-container btn-prev" type="button">&lt</button>
+              <span id="whichPic">1/2</span>
+              <button class="btn-container btn-next" type="button">&gt</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <footer>hallo</footer>
+    <footer><h3>Aldin Kojic</h3></footer>
     <script src="script.js"></script>
   </body>
 </html>
