--- a/index.html
+++ b/index.html
@@ -22,17 +22,9 @@
     <h1>My personal photo album</h1>
 
     <section class="img-container">
-      <img class="gallery-img" src="./Img2/Schaf.jpg" alt="Schafsherde" />
-      <img class="gallery-img"  src="./Img2/Viper-Schlange.jpg" alt="Viper-Schlange" />
-      <img class="gallery-img" src="./Img2/Wolf.jpg" alt="grauer Wolf" />
-      <img class="gallery-img" src="./Img2/Husky.jpg" alt="Huksy" />
-      <img class="gallery-img" src="./Img2/Löwe.png" alt="Löwe" />
-      <img class="gallery-img" src="./Img2/Eule.jpg" alt="Eule" />
-      <img class="gallery-img" src="./Img2/Marienkäfer - Kopie.jpg" alt="Marienkäfer"/>
-      <img class="gallery-img" src="./Img2/Giraffe - Kopie.jpg" alt="Giraffe" />
-      <img class="gallery-img" src="./Img2/brown-bear-892232_1280.jpg" alt="Braunbär"/>
-      <img class="gallery-img" src="./Img2/Schmetterling.jpg"  alt="Schmetterling"/>
-      <img class="gallery-img" src="./Img2/Adler.jpg" alt="Adler" />
+    
+      <div class="gallery-img" id="imgList"></div>
+  
     </section>
 
     <!-- Modal -->
