css bereinigt+ js

--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
     <h1>My personal photo album</h1>
 
     <section class="img-container">
-    
-      <div class="gallery-img" id="imgList"></div>
-  
+      
+      <dialog id="imageDialog">
+        <img id="dialogImage" src="" alt="" />
+      </dialog>
+
+      <div  class="imghey" id="imgList"></div>
     </section>
 
     <!-- Modal -->
